AcsStatsWeb/ClientApp/src/app/modules/shared/components/records-main-nav/records-main-nav.component.css
.navigate > div {
  display: inline-block;
  float: left;
}

.return {
  background-color: rgba(33, 97, 4);
  padding: 0.375rem 0.75rem ;
  border-radius: 5px;
  float: right;
}
.navigate > div > a {
  background-color: rgba(33, 97, 4);
  color: white;
}

.navigate {
  margin-top: 1rem ;
}

@media screen and (min-width: 900px) {
  .navigate > div {
    float: none;
  }

}

